  07 Mar 2015; NP-Hardass <np.hardass@gmail.com> winetricks-20141130.ebuild:
  Backport new git rebuild features to 20141130

*winetricks-99999999 (07 Mar 2015)

  07 Mar 2015; NP-Hardass <np.hardass@gmail.com> +winetricks-99999999.ebuild:
  Add live ebuild with patch from Bob Wya.  Resolves Gentoo bug #540662

*winetricks-20141130 (22 Jan 2015)

  22 Jan 2015; NP-Hardass <np.hardass@gmail.com> +metadata.xml,
  +winetricks-20141130.ebuild:
  Import from Gentoo, version bump to 20141130